# my_portfolio

./: .gitignore  README.md
churn-project/: .gitignore  README.md  pyproject.toml
churn-project/app/: dash_app.py
churn-project/models/: churn_rf_bundle.pkl
churn-project/notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_modeling.ipynb
