[project]
name = "churn-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "evemod3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "pandas (==3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "keras (>=3.13.2,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "scikeras (>=0.13.0,<0.14.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "dash (>=4.0.0,<5.0.0)",
    "shap (>=0.50.0,<0.51.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
